--- a/configs/regressor.yaml
+++ b/configs/regressor.yaml
@@ -1,11 +1,19 @@
 #the classifier to use
 regressor : |
   ensemble.RandomForestRegressor(
-    n_estimators=30,
+    n_estimators=100,
     max_features='sqrt',
     n_jobs=-1,
     max_depth=12,
   )
+
+
+telescope_type_key: telescope_type_name
+telescope_events_key: telescope_events
+array_events_key: array_events
+runs_key: runs
+
+multiple_telescopes: True
 
 target_name: mc_energy
 
@@ -18,9 +26,6 @@ class_name: gamma_energy
 
 # Define the name of the column that contains the name of the telescope in case you're working
 # with mulitple telescopes and telescope types
-#telescope_type_key: telescope:name
-
-
 telescope_type_key: telescope_type_name
 
 training_variables:
