--- a/configs/separator.yaml
+++ b/configs/separator.yaml
@@ -1,18 +1,21 @@
 classifier : |
   ensemble.RandomForestClassifier(
-      n_estimators=200,
+      n_estimators=100,
       max_features='sqrt',
       n_jobs=-1,
       max_depth=10,
       criterion='entropy',
   )
 
-# n_background: 12000
-# n_signal: 12000
 
 n_cross_validations : 5
 
 telescope_type_key: telescope_type_name
+telescope_events_key: telescope_events
+array_events_key: array_events
+runs_key: runs
+
+multiple_telescopes: True
 
 training_variables:
   - num_triggered_telescopes
