--- a/configs/regressor.yaml
+++ b/configs/regressor.yaml
@@ -1,13 +1,12 @@
 #the classifier to use
 regressor : |
   ensemble.RandomForestRegressor(
-    n_estimators=100,
+    n_estimators=200,
     max_features='sqrt',
     n_jobs=-1,
-    max_depth=12,
+    max_depth=10,
   )
 
-n_signal: 3000
 
 telescope_type_key: telescope_type_name
 telescope_events_key: telescope_events
@@ -19,9 +18,9 @@ multiple_telescopes: True
 target_name: mc_energy
 
 # define the number of cross validations to perform
-n_cross_validations : 5
+n_cross_validations : 10
 
-# Define the name of the category you want to find. The default is 'gamma'.
+# Define the name of the category you want to find. The default is 'gamma_energy'.
 # It will be written as <class_name>_prediction into the file when applying the model.
 class_name: gamma_energy
 
@@ -38,3 +37,9 @@ training_variables:
   - intensity
   - camera_id
   - telescope_type_id
+  - total_intensity
+  - h_max_prediction
+  - distance_to_core
+  - num_triggered_lst
+  - num_triggered_mst
+  - num_triggered_sst
