--- a/configs/separator.yaml
+++ b/configs/separator.yaml
@@ -1,16 +1,14 @@
 classifier : |
   ensemble.RandomForestClassifier(
-      n_estimators=100,
+      n_estimators=200,
       max_features='sqrt',
       n_jobs=-1,
       max_depth=10,
       criterion='entropy',
   )
 
-n_background: 3000
-n_signal: 3000
 
-n_cross_validations : 5
+n_cross_validations : 10
 
 telescope_type_key: telescope_type_name
 telescope_events_key: telescope_events
@@ -28,3 +26,9 @@ training_variables:
   - intensity
   - camera_id
   - telescope_type_id
+  - total_intensity
+  - h_max_prediction
+  - distance_to_core
+  - num_triggered_lst
+  - num_triggered_mst
+  - num_triggered_sst
