--- a/configs/iact_config.yaml
+++ b/configs/iact_config.yaml
@@ -15,18 +15,18 @@ multiple_telescopes: True
 energy:
   regressor : |
     ensemble.RandomForestRegressor(
-      n_estimators=100,
+      n_estimators=200,
       max_features='sqrt',
       n_jobs=-1,
-      max_depth=12,
+      max_depth=18,
     )
 
-  log_target: True
+  log_target: False
 
   target_column: mc_energy
 
   # define the number of cross validations to perform
-  n_cross_validations : 5
+  n_cross_validations : 3
 
   # Define the name of the category you want to find. The default is 'gamma_energy'.
   # It will be written as <class_name>_prediction into the file when applying the model.
@@ -54,6 +54,14 @@ energy:
     - num_triggered_sst
     - mirror_area
     - focal_length
+    - leakage1_intensity
+    - leakage2_intensity
+    - leakage1_pixel
+    - leakage2_pixel
+    - concentration_pixel
+    - concentration_core
+    - concentration_cog
+  
 
 
   feature_generation:
@@ -72,10 +80,10 @@ energy:
 separator:
   classifier : |
     ensemble.RandomForestClassifier(
-        n_estimators=100,
+        n_estimators=200,
         max_features='sqrt',
         n_jobs=-1,
-        max_depth=12,
+        max_depth=14,
         criterion='entropy',
     )
 
@@ -83,7 +91,7 @@ separator:
   # n_signal: 100000
   #n_background: 100000
 
-  n_cross_validations : 5
+  n_cross_validations : 3
 
   # telescope_type_key: telescope_type_name
   # telescope_events_key: telescope_events
@@ -112,6 +120,13 @@ separator:
     - num_triggered_sst
     - mirror_area
     - focal_length
+    - leakage1_intensity
+    - leakage2_intensity
+    - leakage1_pixel
+    - leakage2_pixel
+    - concentration_pixel
+    - concentration_core
+    - concentration_cog
 
 
   feature_generation:
